--- a/WebFormsApp/Views/Shared/_Layout.cshtml
+++ b/WebFormsApp/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Photos">Photos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/StoredAlbums">Albumes guardados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/StoredPhotos">Photos guardados</a>
+                    </li>
                 </ul>
             </div>
         </nav>
