--- a/WebFormsApp/Views/StoredAlbums/Index.cshtml
+++ b/WebFormsApp/Views/StoredAlbums/Index.cshtml
@@ -30,7 +30,7 @@
                 <td>@album.Title</td>
                 <td>@album.UserId</td>
                 <td>
-                    <a href="@Url.Action("Details", "Albums", new { albumId = album.Id })">View Photos</a>
+                    <a href="@Url.Action("Index", "StoredPhotos", new { filterAlbum = album.Id })">View Photos</a>
                     <a href="@Url.Action("RemoveAlbum", "Albums", new { title = album.Title, userId = album.UserId })">Remove Album</a>
                 </td>
             </tr>
